[gd_scene load_steps=10 format=3 uid="uid://ctf8w3p7rcpm"]

[ext_resource type="Script" uid="uid://b3cul5372q6v8" path="res://Scripts/GPU_Based/TerrainGeneration_GPU.gd" id="1_df2f7"]
[ext_resource type="Material" uid="uid://dsrpobw8nocch" path="res://Materials/SMAT_Terrain.tres" id="2_0qbic"]
[ext_resource type="Script" uid="uid://bixq1r0wgdc4p" path="res://Scripts/PlayerMovement.gd" id="4_30205"]
[ext_resource type="Script" uid="uid://cda3fwm63dl00" path="res://Scripts/PerformanceStatistics.gd" id="5_0qbic"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_yixtj"]
sky_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)
ground_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)

[sub_resource type="Sky" id="Sky_8ugv2"]
sky_material = SubResource("ProceduralSkyMaterial_yixtj")

[sub_resource type="Environment" id="Environment_afunh"]
background_mode = 2
sky = SubResource("Sky_8ugv2")
tonemap_mode = 2
glow_enabled = true
fog_enabled = true
fog_mode = 1
fog_density = 1.0
fog_depth_begin = 64.0
fog_depth_end = 128.0

[sub_resource type="GDScript" id="GDScript_23c27"]
script/source = "extends WorldEnvironment

func on_generated_terrain_set_fog_settings(render_distance: int) -> void:
	self.environment.fog_depth_begin = (render_distance / 2) * 32 - 16
	self.environment.fog_depth_end = render_distance * 32
"

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_88t3t"]

[node name="WorldOrigin" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_afunh")
script = SubResource("GDScript_23c27")

[node name="PerformanceStatisticsControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("5_0qbic")

[node name="VBoxContainer" type="VBoxContainer" parent="PerformanceStatisticsControl"]
custom_minimum_size = Vector2(250, 450)
layout_mode = 1
offset_right = 350.0
offset_bottom = 450.0

[node name="FPS_Text" type="RichTextLabel" parent="PerformanceStatisticsControl/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
bbcode_enabled = true
text = "Test"

[node name="ChunksRendered_Text" type="RichTextLabel" parent="PerformanceStatisticsControl/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
bbcode_enabled = true
text = "Test"

[node name="WorkerThreads_Text" type="RichTextLabel" parent="PerformanceStatisticsControl/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
bbcode_enabled = true
text = "Test"

[node name="ChunksLoadedPerFrame_Text" type="RichTextLabel" parent="PerformanceStatisticsControl/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
bbcode_enabled = true
text = "Test"

[node name="RenderDistance_Text" type="RichTextLabel" parent="PerformanceStatisticsControl/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
bbcode_enabled = true
text = "Test"

[node name="RenderDistanceHeight_Text" type="RichTextLabel" parent="PerformanceStatisticsControl/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
bbcode_enabled = true
text = "Test"

[node name="ChunkSize_Text" type="RichTextLabel" parent="PerformanceStatisticsControl/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
bbcode_enabled = true
text = "Test"

[node name="GeneratedTerrain_GPU" type="MeshInstance3D" parent="."]
script = ExtResource("1_df2f7")
terrain_material = ExtResource("2_0qbic")
chunk_size = 16
chunks_to_load_per_frame = 4
flat_shaded = true
render_distance = 6
render_distance_height = 2

[node name="Player" type="CharacterBody3D" parent="."]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, 16, 16, 16)
script = ExtResource("4_30205")

[node name="Camera3D" type="Camera3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player"]
shape = SubResource("CapsuleShape3D_88t3t")

[connection signal="set_chunks_rendered_text" from="GeneratedTerrain_GPU" to="PerformanceStatisticsControl" method="set_chunks_rendered"]
[connection signal="set_fog_settings" from="GeneratedTerrain_GPU" to="WorldEnvironment" method="on_generated_terrain_set_fog_settings"]
[connection signal="set_statistics" from="GeneratedTerrain_GPU" to="PerformanceStatisticsControl" method="set_initial_statistics_text"]
